--- a/SML_Project_Q1.ipynb
+++ b/SML_Project_Q1.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 1,
       "metadata": {
         "id": "OAMTJWuE1aSU"
       },
@@ -29,7 +29,8 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from scipy.stats import norm"
       ]
     },
     {
@@ -49,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IxxQueF10txs",
-        "outputId": "08c22c58-11a4-44e7-bf0d-1a0fa1c999d8"
+        "outputId": "7ab3c30b-463c-4239-c5f0-c631643cb856"
       },
       "outputs": [
         {
@@ -59,7 +60,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1mFilhzDbZqb4xC6ifBLPjha1Svmqcr9X\n",
             "To: /content/SML_Project_Dataset.zip\n",
-            "\r  0% 0.00/400k [00:00<?, ?B/s]\r100% 400k/400k [00:00<00:00, 121MB/s]\n"
+            "\r  0% 0.00/400k [00:00<?, ?B/s]\r100% 400k/400k [00:00<00:00, 21.6MB/s]\n"
           ]
         }
       ],
@@ -75,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K9uhuosS1Fqg",
-        "outputId": "ba49faa3-3ec6-4fb8-94ac-6b9b295c63d7"
+        "outputId": "53fa24c7-bac1-48e5-e1b3-b8f5e1df1355"
       },
       "outputs": [
         {
@@ -491,7 +492,7 @@
       "metadata": {
         "id": "NttDLuyeYgXr"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -511,12 +512,12 @@
       "metadata": {
         "id": "4vnblJdEYtFL"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 6,
       "metadata": {
         "id": "DPzKw_wb18uP"
       },
@@ -527,14 +528,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
         },
         "id": "ve6PmSLp2sX6",
-        "outputId": "c4a8ad51-235a-415c-b8f0-1ed93c6e647c"
+        "outputId": "dd04ce76-5d2c-49eb-eb74-4c9ec2edb3aa"
       },
       "outputs": [
         {
@@ -568,7 +569,7 @@
       "metadata": {
         "id": "75mpV-dWbJuT"
       },
-      "execution_count": 36,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -581,9 +582,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "udkvVzEtbWYe",
-        "outputId": "757cf710-871b-4364-b9c1-debb10182a6a"
+        "outputId": "1b1383b8-4021-4cf2-860b-008f3d61f8cc"
       },
-      "execution_count": 37,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,6 +592,197 @@
           "text": [
             "mean = 0.0265, var = 1.439\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Symetric Hypothesis Test"
+      ],
+      "metadata": {
+        "id": "-0u7TOMI4cgj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Refrences:\n",
+        "\n",
+        "https://en.wikipedia.org/wiki/Wilcoxon_signed-rank_test\n",
+        "\n",
+        "https://mathcracker.com/wilcoxon-signed-ranks"
+      ],
+      "metadata": {
+        "id": "8STIBdERqH1C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "returns = overall_dataset[\"Return\"][1:]"
+      ],
+      "metadata": {
+        "id": "Unu_x9At4f3y"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.median(returns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y2g6mYBe4jGf",
+        "outputId": "e5075356-de6c-4f18-f461-307f7c67a60f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.006084588487516e-05"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sign_values = np.sign(np.array(sorted(returns.values, key=lambda x: np.abs(x))))\n",
+        "rank_values = np.array(range(1, len(sign_values)+1))\n",
+        "\n",
+        "wp = 0\n",
+        "wm = 0\n",
+        "\n",
+        "for rank, sign_sample in zip(rank_values, sign_values):\n",
+        "  if sign_sample == +1:\n",
+        "    wp += rank\n",
+        "  else:\n",
+        "    wm += rank"
+      ],
+      "metadata": {
+        "id": "It0aZbsMjRRQ"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = min(wp, wm)"
+      ],
+      "metadata": {
+        "id": "6TdutCLLj4wi"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = len(returns)"
+      ],
+      "metadata": {
+        "id": "prHJFSSoJ1E-"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = (T - n*(n+1)/4) / (np.sqrt((n*(n+1)*(2*n+1))/24))"
+      ],
+      "metadata": {
+        "id": "Stbeus8aj8za"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oyWaLThFLUAx",
+        "outputId": "1cad6030-aee0-48ff-908d-caff30f1e168"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "477"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A3cw_c5gkiET",
+        "outputId": "95756b3d-9d82-49a2-b2fa-d40df4b92caf"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.26111361907506153"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norm.ppf(1-0.05)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UKJjcwbroJKF",
+        "outputId": "ffa9d1a3-d084-4dee-ff81-214f630d6407"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.6448536269514722"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
         }
       ]
     },
@@ -968,8 +1160,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPVAnah3ln235mnO/W2B7b1",
+      "authorship_tag": "ABX9TyP9gci8vNCj5Xh4x2b/2gWy",
       "include_colab_link": true
     },
     "kernelspec": {
