Q2: Debug, Refactor, Complete

--- a/SML_Project_Q2.ipynb
+++ b/SML_Project_Q2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNKjpJrpT7UcgLNWrZr+nk",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNFGCd5EHdaQdqOf6RnhQk5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +30,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<center><b>In the name of God</b></center>\n",
+        "\n",
+        "<b>Course</b>: Statistical Machine Learning\n",
+        "<br>\n",
+        "<b>Description:</b> Project | Question 2\n",
+        "<br>\n",
+        "<b>Developer</b>: Alireza Mazochi (400131075)"
+      ],
+      "metadata": {
+        "id": "6QlnPO-hcdvb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Libraries"
       ],
       "metadata": {
@@ -49,65 +65,23 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "overall_dataset = pd.read_csv(\"/content/Overall.csv\")"
+        "# Dataset"
       ],
       "metadata": {
-        "id": "FW4e7gwysMpc"
-      },
-      "execution_count": 55,
-      "outputs": []
+        "id": "KOiEy3DlY2nD"
+      }
     },
     {
       "cell_type": "code",
-      "source": [
-        "overall_dataset[\"Return\"] = overall_dataset[\"Close\"].diff()/overall_dataset[\"Close\"]"
-      ],
-      "metadata": {
-        "id": "U3hfq9_FsvUJ"
-      },
-      "execution_count": 56,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for lag in range(1, 6):\n",
-        "  autocorrelation = overall_dataset[\"Return\"].autocorr(lag=lag)\n",
-        "  print(f\"Lag = {lag}, Autocorrelation = {autocorrelation}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "J-UlpmPwtBTo",
-        "outputId": "1da1f752-fb92-4b0d-a2cb-075f144aadcb"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Lag = 1, Autocorrelation = 0.3420962070256291\n",
-            "Lag = 2, Autocorrelation = 0.026094104901236134\n",
-            "Lag = 3, Autocorrelation = 0.06856595465315196\n",
-            "Lag = 4, Autocorrelation = -0.008159864385430154\n",
-            "Lag = 5, Autocorrelation = -0.029116582025897918\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IxxQueF10txs",
-        "outputId": "7dc9b5e3-0612-41a0-b862-4b9117bf74e7"
+        "outputId": "e96dea08-3685-456e-db86-765ae1d8f964"
       },
       "outputs": [
         {
@@ -117,7 +91,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1mFilhzDbZqb4xC6ifBLPjha1Svmqcr9X\n",
             "To: /content/SML_Project_Dataset.zip\n",
-            "\r  0% 0.00/400k [00:00<?, ?B/s]\r100% 400k/400k [00:00<00:00, 79.7MB/s]\n"
+            "\r  0% 0.00/436k [00:00<?, ?B/s]\r100% 436k/436k [00:00<00:00, 115MB/s]\n"
           ]
         }
       ],
@@ -127,13 +101,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K9uhuosS1Fqg",
-        "outputId": "194d8e3c-e8dc-4e58-9763-0910599f7261"
+        "outputId": "76762125-fe9b-4f71-885c-612ce5f89566"
       },
       "outputs": [
         {
@@ -141,11 +115,14 @@
           "name": "stdout",
           "text": [
             "Archive:  /content/SML_Project_Dataset.zip\n",
+            "  inflating: Gold.csv                \n",
             "  inflating: Kekhak.csv              \n",
-            "  inflating: Foolad.csv              \n",
-            "  inflating: Shasta.csv              \n",
             "  inflating: Khodro.csv              \n",
-            "  inflating: Atlas.csv               \n"
+            "  inflating: Overall.csv             \n",
+            "  inflating: Shasta.csv              \n",
+            "  inflating: Atlas.csv               \n",
+            "  inflating: Dollar.csv              \n",
+            "  inflating: Foolad.csv              \n"
           ]
         }
       ],
@@ -155,17 +132,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "source": [
+        "overall_dataset = pd.read_csv(\"/content/Overall.csv\")\n",
+        "dolar_dataset = pd.read_csv(\"/content/Dollar.csv\")\n",
+        "gold_dataset = pd.read_csv(\"/content/Gold.csv\")"
+      ],
+      "metadata": {
+        "id": "FW4e7gwysMpc"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "overall_dataset[\"<DTYYYYMMDD>\"] = overall_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))\n",
+        "dolar_dataset[\"<DTYYYYMMDD>\"] = dolar_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))\n",
+        "gold_dataset[\"<DTYYYYMMDD>\"] = gold_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))"
+      ],
+      "metadata": {
+        "id": "mIhA-IMOZtiD"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "id": "yDI1rGGf1Nav"
       },
       "outputs": [],
       "source": [
-        "atlas_dataset = pd.read_csv(\"/content/Atlas.csv\")\n",
-        "foolad_dataset = pd.read_csv(\"/content/Foolad.csv\")\n",
-        "kekhak_dataset = pd.read_csv(\"/content/Kekhak.csv\")\n",
-        "khodro_dataset = pd.read_csv(\"/content/Khodro.csv\")\n",
-        "shasta_dataset = pd.read_csv(\"/content/Shasta.csv\")"
+        "atlas_dataset = pd.read_csv(\"/content/Atlas.csv\").sort_values(\"<DTYYYYMMDD>\")\n",
+        "foolad_dataset = pd.read_csv(\"/content/Foolad.csv\").sort_values(\"<DTYYYYMMDD>\")\n",
+        "kekhak_dataset = pd.read_csv(\"/content/Kekhak.csv\").sort_values(\"<DTYYYYMMDD>\")\n",
+        "khodro_dataset = pd.read_csv(\"/content/Khodro.csv\").sort_values(\"<DTYYYYMMDD>\")\n",
+        "shasta_dataset = pd.read_csv(\"/content/Shasta.csv\").sort_values(\"<DTYYYYMMDD>\")"
       ]
     },
     {
@@ -182,7 +185,42 @@
       "metadata": {
         "id": "O0XWpBcQ1108"
       },
-      "execution_count": 51,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Return"
+      ],
+      "metadata": {
+        "id": "mHDItAsaZFh3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "overall_dataset[\"Return\"] = overall_dataset[\"Close\"].diff()/overall_dataset[\"Close\"]\n",
+        "dolar_dataset[\"Return\"] = dolar_dataset[\"Close\"].diff()/dolar_dataset[\"Close\"]\n",
+        "gold_dataset[\"Return\"] = gold_dataset[\"Close\"].diff()/gold_dataset[\"Close\"]"
+      ],
+      "metadata": {
+        "id": "U3hfq9_FsvUJ"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "overall_dataset = overall_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]\n",
+        "dolar_dataset = dolar_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]\n",
+        "gold_dataset = gold_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]"
+      ],
+      "metadata": {
+        "id": "lhlXX18qaUiS"
+      },
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -199,15 +237,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ef85bfa-bcf2-4c79-b340-9b8ca21be8e4"
+        "outputId": "378c5833-1c0f-4b66-991f-ccf036110ee9"
       },
-      "execution_count": 52,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-52-ece0a09dd663>:4: SettingWithCopyWarning: \n",
+            "<ipython-input-11-ece0a09dd663>:4: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -218,30 +256,56 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "overall_dataset[\"<DTYYYYMMDD>\"] = overall_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))"
+        "# Autocorrelation"
       ],
       "metadata": {
-        "id": "SyEtaKDqv58N"
-      },
-      "execution_count": 58,
-      "outputs": []
+        "id": "6wqevx4SZNBQ"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "overall_dataset = overall_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]"
+        "for lag in range(1, 6):\n",
+        "  autocorrelation = overall_dataset[\"Return\"].autocorr(lag=lag)\n",
+        "  print(f\"Lag = {lag}, Autocorrelation = {autocorrelation}\")"
       ],
       "metadata": {
-        "id": "ofYWlKBhv9yA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J-UlpmPwtBTo",
+        "outputId": "42912040-2862-4106-a7fe-1dfa15fa0be9"
       },
-      "execution_count": 59,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lag = 1, Autocorrelation = 0.3420962070256291\n",
+            "Lag = 2, Autocorrelation = 0.026094104901236134\n",
+            "Lag = 3, Autocorrelation = 0.06856595465315196\n",
+            "Lag = 4, Autocorrelation = -0.008159864385430154\n",
+            "Lag = 5, Autocorrelation = -0.029116582025897918\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Correlation"
+      ],
+      "metadata": {
+        "id": "XL-t0ojHZWpI"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "# Corrlation with stock shares\n",
         "for name in datasets:\n",
         "  common_dataset = datasets[name][[\"<DTYYYYMMDD>\", \"Return\"]]\\\n",
         "                  .set_index(\"<DTYYYYMMDD>\")\\\n",
@@ -258,19 +322,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3c9BoBXWxC0m",
-        "outputId": "a6c555e7-ebe2-4186-c69d-0c7be1a52e5e"
+        "outputId": "01f07ace-1ba2-4f91-f9d1-bbd128270b83"
       },
-      "execution_count": 63,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Atlas: -0.15002228335029916\n",
-            "Foolad: -0.18096399614198005\n",
-            "Kekhak: -0.16549298220939176\n",
-            "Khodro: -0.20836276640727938\n",
-            "Shasta: -0.07992465007464157\n"
+            "Atlas: 0.85945676743588\n",
+            "Foolad: 0.3087456241782305\n",
+            "Kekhak: 0.14459757499068746\n",
+            "Khodro: 0.6678754557875755\n",
+            "Shasta: 0.03573243689880025\n"
           ]
         }
       ]
@@ -278,50 +342,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dolar_dataset = pd.read_csv(\"/content/Dollar.csv\")"
-      ],
-      "metadata": {
-        "id": "BUQljhM_01OI"
-      },
-      "execution_count": 65,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dolar_dataset[\"<DTYYYYMMDD>\"] = dolar_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))"
-      ],
-      "metadata": {
-        "id": "TjWWlwEA6bpS"
-      },
-      "execution_count": 67,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dolar_dataset[\"Return\"] = dolar_dataset[\"Close\"].diff()/dolar_dataset[\"Close\"]"
-      ],
-      "metadata": {
-        "id": "vxdpsmyA6dD9"
-      },
-      "execution_count": 68,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dolar_dataset = dolar_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]"
-      ],
-      "metadata": {
-        "id": "RP_OAUZ-6u76"
-      },
-      "execution_count": 69,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Correlation with Dollar\n",
         "common_dataset = dolar_dataset\\\n",
         "                .set_index(\"<DTYYYYMMDD>\")\\\n",
         "                .join(overall_dataset\\\n",
@@ -337,9 +358,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sh7MxyKC60F6",
-        "outputId": "a47e6657-7357-40b0-8d56-62c47372a0bb"
+        "outputId": "13e32611-454d-4441-a93d-d93f3c6823e6"
       },
-      "execution_count": 72,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,50 +374,7 @@
     {
       "cell_type": "code",
       "source": [
-        "gold_dataset = pd.read_csv(\"/content/Gold.csv\")"
-      ],
-      "metadata": {
-        "id": "zpDBPp4t9m3a"
-      },
-      "execution_count": 74,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "gold_dataset[\"<DTYYYYMMDD>\"] = gold_dataset[\"Date\"].apply(lambda x:int(x[:4]+x[5:7]+x[8:10]))"
-      ],
-      "metadata": {
-        "id": "6GK7Fp-v9m3b"
-      },
-      "execution_count": 75,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "gold_dataset[\"Return\"] = gold_dataset[\"Close\"].diff()/gold_dataset[\"Close\"]"
-      ],
-      "metadata": {
-        "id": "jM7MWmCL9m3b"
-      },
-      "execution_count": 76,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "gold_dataset = gold_dataset[[\"<DTYYYYMMDD>\", \"Return\"]]"
-      ],
-      "metadata": {
-        "id": "mKVfDtcJ9m3b"
-      },
-      "execution_count": 77,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Correlation with Gold\n",
         "common_dataset = gold_dataset\\\n",
         "                .set_index(\"<DTYYYYMMDD>\")\\\n",
         "                .join(overall_dataset\\\n",
@@ -411,10 +389,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d917332-3adf-4112-a116-8cc278350f5e",
+        "outputId": "cd131e82-9269-43b0-d81e-3b32fa5de073",
         "id": "vBRG234f9m3c"
       },
-      "execution_count": 80,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
