Q3: Test Lasso Regression

--- a/SML_Project_Q3.ipynb
+++ b/SML_Project_Q3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOvItv/hZDS68GnvnFUaJPV",
+      "authorship_tag": "ABX9TyN4njkplwjqAlObzZZ0Ae28",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,12 +42,13 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import scipy.stats"
+        "import scipy.stats\n",
+        "from sklearn.linear_model import Lasso"
       ],
       "metadata": {
         "id": "8IQQ1MUdI5U7"
       },
-      "execution_count": 1,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -226,7 +227,7 @@
       "metadata": {
         "id": "w4EpYJ2n8Cqw"
       },
-      "execution_count": 36,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -238,7 +239,7 @@
       "metadata": {
         "id": "VgqMMMb88Mi9"
       },
-      "execution_count": 37,
+      "execution_count": 62,
       "outputs": []
     },
     {
@@ -1355,10 +1356,304 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# LASSO Regresion"
+      ],
+      "metadata": {
+        "id": "cXuv5qdGEKI4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = overall_dataset[[\"Date\", \"Return\"]]"
+      ],
+      "metadata": {
+        "id": "ZE3Xw-npEcoZ"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1, 11):\n",
+        "  dataset[f\"Prev-{i}-Return\"] = dataset[\"Return\"].shift(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5b1da2c-26c9-4e62-b09b-a5b5fd9a6073",
+        "id": "hmJiX1v_Ecoa"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-65-aab302d415a7>:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  dataset[f\"Prev-{i}-Return\"] = dataset[\"Return\"].shift(i)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset.dropna(inplace=True)"
+      ],
+      "metadata": {
+        "id": "G0Hsmm32Ecoa"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = len(dataset)"
+      ],
+      "metadata": {
+        "id": "oRozX97FEcoa"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.stack([dataset[\"Prev-1-Return\"].values,\n",
+        "              dataset[\"Prev-2-Return\"].values,\n",
+        "              dataset[\"Prev-3-Return\"].values,\n",
+        "              dataset[\"Prev-4-Return\"].values,\n",
+        "              dataset[\"Prev-5-Return\"].values,\n",
+        "              dataset[\"Prev-6-Return\"].values,\n",
+        "              dataset[\"Prev-7-Return\"].values,\n",
+        "              dataset[\"Prev-8-Return\"].values,\n",
+        "              dataset[\"Prev-9-Return\"].values,\n",
+        "              dataset[\"Prev-10-Return\"].values,\n",
+        "              np.full(n, 1)], axis=-1)\n",
+        "\n",
+        "Y = dataset[\"Return\"].values"
+      ],
+      "metadata": {
+        "id": "1kXNxpoDEcob"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test = X[:int(0.8*n)], X[int(0.8*n):]\n",
+        "Y_train, Y_test = Y[:int(0.8*n)], Y[int(0.8*n):]"
+      ],
+      "metadata": {
+        "id": "oNxAhpjqEcob"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for alpha in [0, 0.01, 0.1, 0.2, 0.5, 1, 2, 4, 8, 64]:\n",
+        "  lasso_regression = Lasso(normalize=True, alpha=alpha)\n",
+        "  lasso_regression.fit(X_train, Y_train)  \n",
+        "  Y_predicted = lasso_regression.predict(X_test)\n",
+        "  print(f\"Alpha = {alpha} MSE = {mse(Y_predicted, Y_test)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A73Ck6WUEfJf",
+        "outputId": "6a61efba-2e32-49f5-81b7-9198ee07eb20"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alpha = 0 MSE = 0.0001243985214808293\n",
+            "Alpha = 0.01 MSE = 0.0001273466432473387\n",
+            "Alpha = 0.1 MSE = 0.0001273466432473387\n",
+            "Alpha = 0.2 MSE = 0.0001273466432473387\n",
+            "Alpha = 0.5 MSE = 0.0001273466432473387\n",
+            "Alpha = 1 MSE = 0.0001273466432473387\n",
+            "Alpha = 2 MSE = 0.0001273466432473387\n",
+            "Alpha = 4 MSE = 0.0001273466432473387\n",
+            "Alpha = 8 MSE = 0.0001273466432473387\n",
+            "Alpha = 64 MSE = 0.0001273466432473387\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "<ipython-input-78-7f7f6ed096d1>:3: UserWarning: With alpha=0, this algorithm does not converge well. You are advised to use the LinearRegression estimator\n",
+            "  lasso_regression.fit(X_train, Y_train)\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_coordinate_descent.py:647: UserWarning: Coordinate descent with no regularization may lead to unexpected results and is discouraged.\n",
+            "  model = cd_fast.enet_coordinate_descent(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_coordinate_descent.py:647: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.114e-02, tolerance: 5.152e-06 Linear regression models with null weight for the l1 regularization term are more efficiently fitted using one of the solvers implemented in sklearn.linear_model.Ridge/RidgeCV instead.\n",
+            "  model = cd_fast.enet_coordinate_descent(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_base.py:141: FutureWarning: 'normalize' was deprecated in version 1.0 and will be removed in 1.2.\n",
+            "If you wish to scale the data, use Pipeline with a StandardScaler in a preprocessing stage. To reproduce the previous behavior:\n",
+            "\n",
+            "from sklearn.pipeline import make_pipeline\n",
+            "\n",
+            "model = make_pipeline(StandardScaler(with_mean=False), Lasso())\n",
+            "\n",
+            "If you wish to pass a sample_weight parameter, you need to pass it as a fit parameter to each step of the pipeline as follows:\n",
+            "\n",
+            "kwargs = {s[0] + '__sample_weight': sample_weight for s in model.steps}\n",
+            "model.fit(X, y, **kwargs)\n",
+            "\n",
+            "Set parameter alpha to: original_alpha * np.sqrt(n_samples). \n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cuc9-6Jb6t2s"
+        "id": "cv78kKDyHTd5"
       },
       "execution_count": null,
       "outputs": []
